Fix CARGO-879 : Cannot set JVM arguments in GlassFish